<resources>
    <string name="app_name">PexelsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category Name</string>
    <string name="search">Search</string>
    <string name="load_image_error">Load image error</string>
    <string name="connection_error">Connection error</string>
    <string name="paging_error">Paging error</string>
    <string name="query_string_error">Photo did not find</string>
    <string name="no_result_found">No result found</string>
    <string name="explore">Explore</string>
    <string name="try_again">Try Again</string>
    <string name="file_downloaded">Photo was downloaded</string>
    <string name="networkcapabilities_transport_cellular">NetworkCapabilities.TRANSPORT_CELLULAR</string>
    <string name="networkcapabilities_transport_wifi">NetworkCapabilities.TRANSPORT_WIFI</string>
    <string name="networkcapabilities_transport_ethernet">NetworkCapabilities.TRANSPORT_ETHERNET</string>
    <string name="image">Image</string>
    <string name="image_jpeg">image.jpeg</string>
    <string name="mimeType">image/jpeg</string>
    <string name="downloading_started">Downloading started</string>
    <string name="no_connection">No connection</string>
    <string name="image_not_found">Image not found</string>
    <string name="author">Author</string>
    <string name="photo_was_added_to_bookmarks">Photo was added to bookmarks</string>
    <string name="you_haven_t_saved_anything_yet">You haven\'t saved anything yet</string>
    <string name="delete_photo">Delete photo</string>
    <string name="are_you_sure">Are you sure, that you want to delete this photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photo_was_deleted_from_favorite">Photo was deleted from Bookmarks</string>
    <string name="dark_mode">Dark mode</string>
    <string name="mobile_data_is_turned_off">Mobile Data is Turned Off</string>
    <string name="turn_on_mobile_data_or_use_wi_fi_to_access_data">Turn on mobile data or use Wi-Fi to access data.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
</resources>