<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">


    <LinearLayout
        android:id="@+id/photo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_home_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="@dimen/search_with"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bkg"
            android:focusable="false"
            app:queryHint="@string/search" />


        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/rv_search_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/search_item" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_item_margin">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/photo_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/photo_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marin_no_result"
            android:paddingTop="@dimen/no_result_padding_top"
            android:text="@string/no_result_found"
            android:textSize="@dimen/no_result_text_size"
            app:layout_constraintBottom_toTopOf="@+id/btn_explore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/explore_padding_top"
            android:text="@string/explore"
            android:textColor="@color/explore_color"
            android:textSize="@dimen/explore_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:duration="800">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
            <include layout="@layout/photo_item" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/tryAgainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/no_connection_image_size"
            android:layout_height="@dimen/no_connection_image_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_no_connection"
            android:src="@drawable/no_connection" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/explore_padding_top"
            android:text="@string/try_again"
            android:textColor="@color/explore_color"
            android:textSize="@dimen/explore_text_size" />

    </LinearLayout>




</ViewFlipper>
